LPS-115537 Build lang

--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ar.properties
@@ -7,6 +7,7 @@ and-operator=والمشغل
 asset-entry-type=نوع إدخال الأصول
 audience=الجمهور
 collection=مجموعة
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=يؤدي تحديد سمات المستخدم المخصصة إلى استرداد الأصول ذات التصنيف المطابق. ويتعين أن تكون الفئات من السياق العالمي.
 displayed-assets-must-match-these-custom-user-profile-attributes=يجب أن تتطابق الأصول المعروضة مع سمات ملفات تعريف المستخدم المخصصة هذه.
 displayed-assets-must-match-these-rules=يتعين أن تطابق الأصول المعروضة مع هذه القواعد.
@@ -33,8 +34,10 @@ query-contains=الاستعلام يحتوي على
 rename-collection=تغيير اسم المجموعة
 the-field-value-is-invalid=قيمة الحقل غير صالحة.
 there-are-no-asset-entries=لا توجد إدخالات أصول.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=لا يوجد استخدامات للمجموعة.
 there-are-no-collections=لا توجد مجموعات.
-view-content=عرض المحتوى
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=استعراض صفحة العرض
+view-items=View Items (Automatic Copy)
 view-usages=عرض الاستخدامات
