--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ca.properties
@@ -7,6 +7,7 @@ and-operator=Operador I
 asset-entry-type=Tipus d'entrada de continguts
 audience=Públic
 collection=Col·lecció
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=L'especificació dels atributs d'usuari personalitzats recupera els continguts que tenen una categorització coincident. Les categories han de ser del context global.
 displayed-assets-must-match-these-custom-user-profile-attributes=Els continguts mostrats han de coincidir amb aquests atributs d'usuari personalitzats.
 displayed-assets-must-match-these-rules=Els continguts mostrats han de coincidir amb aquestes regles.
@@ -33,8 +34,10 @@ query-contains=La consulta conté
 rename-collection=Canvia el nom de la col·lecció
 the-field-value-is-invalid=El valor del camp no és vàlid.
 there-are-no-asset-entries=No hi ha entrades de continguts.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=No hi ha usos de la col·lecció.
 there-are-no-collections=No hi ha col·leccions.
-view-content=Mostra el contingut
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Mostra els usos
