--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_de.properties
@@ -7,6 +7,7 @@ and-operator=Und-Operator
 asset-entry-type=Typ des Asset-Eintrags
 audience=Zielgruppe
 collection=Sammlung
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Geben Sie benutzerdefinierte Attribute an, um Assets nach entsprechender Kategorisierung zu filtern. Kategorien werden aus dem globalen Kontext verwendet.
 displayed-assets-must-match-these-custom-user-profile-attributes=Angezeigte Assets müssen diesen benutzerdefinierten Attributen entsprechen.
 displayed-assets-must-match-these-rules=Angezeigte Assets müssen diesen Regeln entsprechen.
@@ -33,8 +34,10 @@ query-contains=Abfrage enthält
 rename-collection=Sammlung umbenennen
 the-field-value-is-invalid=Der Feldwert ist ungültig.
 there-are-no-asset-entries=Keine Asset-Einträge vorhanden.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Sammlungen werden nicht verwendet.
 there-are-no-collections=Es gibt keine Sammlungen.
-view-content=Inhalt ansehen
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=Anzeigeseite anzeigen
+view-items=View Items (Automatic Copy)
 view-usages=Benutzungen anzeigen
