--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_en_AU.properties
@@ -7,6 +7,7 @@ and-operator=And Operator (Automatic Copy)
 asset-entry-type=Asset Entry Type (Automatic Copy)
 audience=Audience (Automatic Copy)
 collection=Collection (Automatic Copy)
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes retrieves assets that have matching categorization. Categories must be from the global context. (Automatic Copy)
 displayed-assets-must-match-these-custom-user-profile-attributes=Displayed assets must match these custom user profile attributes. (Automatic Copy)
 displayed-assets-must-match-these-rules=Displayed assets must match these rules. (Automatic Copy)
@@ -33,8 +34,10 @@ query-contains=Query Contains (Automatic Copy)
 rename-collection=Rename Collection (Automatic Copy)
 the-field-value-is-invalid=The field value is invalid. (Automatic Copy)
 there-are-no-asset-entries=There are no asset entries. (Automatic Copy)
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages. (Automatic Copy)
 there-are-no-collections=There are no collections. (Automatic Copy)
-view-content=View Content (Automatic Copy)
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=View Usages (Automatic Copy)
