--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_es.properties
@@ -7,6 +7,7 @@ and-operator=Operador AND
 asset-entry-type=Tipo de entrada de activo
 audience=Público
 collection=Colección
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Al especificar los atributos de usuario personalizados, se recuperan activos con una categorización coincidente. Las categorías deben pertenecer al contexto global.
 displayed-assets-must-match-these-custom-user-profile-attributes=Los activos mostrados deben coincidir con estos atributos de perfil de usuario personalizados.
 displayed-assets-must-match-these-rules=Los activos mostrados deben coincidir con estas reglas.
@@ -33,8 +34,10 @@ query-contains=La consulta contiene
 rename-collection=Cambiar nombre de la colección
 the-field-value-is-invalid=El valor del campo no es válido.
 there-are-no-asset-entries=No hay entradas de activos.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=No hay usos de la colección.
 there-are-no-collections=No hay ninguna colección.
-view-content=Ver contenido
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Ver usos
