--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fa.properties
@@ -7,6 +7,7 @@ and-operator=And Operator
 asset-entry-type=نوع محتوا
 audience=حضار
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=مشخص کردن ویژگی های سفارشی کاربر، دارایی هایی را که دارای طبقه بندی تطبیقی هستند، بازیابی می کند. ردهها باید از زمینه جهانی باشند.
 displayed-assets-must-match-these-custom-user-profile-attributes=مطالب نمایش داده شده باید با ویژگی‌های کاربر سفارشی تطابق داشته باشد.
 displayed-assets-must-match-these-rules=مطالب نشان داده شده باید از قوانین زیر تبعیت کنند.
@@ -33,8 +34,10 @@ query-contains=Query Contains
 rename-collection=Rename Collection
 the-field-value-is-invalid=مقدار فیلد نامعتبر است.
 there-are-no-asset-entries=هیچ موجودیتی یافت نشد.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=هیچ مجموعه ای وجود ندارد.
-view-content=مشاهده محتوا
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=مشاهده میزان استفاده
