--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
@@ -7,6 +7,7 @@ and-operator=Opérateur ET
 asset-entry-type=Type d'entrée d'actif
 audience=Publics
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=La spécification des attributs d'utilisateur personnalisés permet de récupérer les actifs qui correspondent à la catégorisation. Les catégories doivent provenir du contexte global.
 displayed-assets-must-match-these-custom-user-profile-attributes=Les actifs affichés doivent correspondre à ces attributs personnalisés de profil d'utilisateur.
 displayed-assets-must-match-these-rules=Les actifs affichés doivent respecter ces règles.
@@ -33,8 +34,10 @@ query-contains=La requête contient
 rename-collection=Renommer la collection
 the-field-value-is-invalid=La valeur du champ n'est pas valide.
 there-are-no-asset-entries=Il n'y a aucune entrée d'actif.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Il n'y a aucune utilisation de collection.
 there-are-no-collections=Il n'y a pas de collection.
-view-content=Afficher le contenu
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Afficher les utilisations
