--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hu.properties
@@ -7,6 +7,7 @@ and-operator=És műveleti jel
 asset-entry-type=Tartalombejegyzés típusa
 audience=Közönség
 collection=Gyűjtemény
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Ha meghatározzuk az egyéni felhasználói tulajdonságokat, azzal kinyerhetők az azonos kategóriákkal rendelkező tartalmak. A kategóriáknak a globális összefüggésből kell származniuk.
 displayed-assets-must-match-these-custom-user-profile-attributes=A megjelenített tartalmaknak meg kell felelniük ezeknek a egyéni felhasználói profil tulajdonságoknak.
 displayed-assets-must-match-these-rules=A megjelenő tartalmaknak meg kell felelniük ezeknek a szabályoknak.
@@ -33,8 +34,10 @@ query-contains=A lekérdezés tartalmazza
 rename-collection=Gyűjtemény átnevezése
 the-field-value-is-invalid=A mező értéke érvénytelen.
 there-are-no-asset-entries=Nincsenek új tartalom bejegyzések.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Nincs gyűjteményhasználat.
 there-are-no-collections=Nincsenek gyűjtemények.
-view-content=Tartalom megjelenítése
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Használat megjelenítése
