--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_it.properties
@@ -7,6 +7,7 @@ and-operator=And Operator
 asset-entry-type=Asset Entry Type
 audience=Audience
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes retrieves assets that have matching categorization. Categories must be from the global context.
 displayed-assets-must-match-these-custom-user-profile-attributes=Displayed assets must match these custom user profile attributes.
 displayed-assets-must-match-these-rules=Displayed assets must match these rules.
@@ -33,8 +34,10 @@ query-contains=Query Contains
 rename-collection=Rename Collection
 the-field-value-is-invalid=The field value is invalid.
 there-are-no-asset-entries=There are no asset entries.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=Nessuna raccolta presente.
-view-content=View Content
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=View Usages
