--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ja.properties
@@ -7,6 +7,7 @@ and-operator=AND演算子
 asset-entry-type=アセットエントリータイプ
 audience=オーディエンス
 collection=コレクション
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=カスタムユーザー属性を指定すると、カテゴリに一致するアセットを取得できます。カテゴリはグローバルコンテクストから選ぶ必要があります。
 displayed-assets-must-match-these-custom-user-profile-attributes=表示されているデータを以下カスタムユーザープロファイルの属性と一致させる
 displayed-assets-must-match-these-rules=表示されているアセットは以下ルールに従う
@@ -33,8 +34,10 @@ query-contains=含まれるクエリー
 rename-collection=コレクション名を変更
 the-field-value-is-invalid=このフィールドの値は無効です。
 there-are-no-asset-entries=アセットエントリーが見つかりません。
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=コレクションは利用されていません。
 there-are-no-collections=コレクションが見つかりません。
-view-content=コンテンツを表示
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=表示ページを表示
+view-items=View Items (Automatic Copy)
 view-usages=利用数を表示
