--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nb.properties
@@ -7,6 +7,7 @@ and-operator=Og-operatør
 asset-entry-type=Ressursinnleggtype
 audience=Publikum
 collection=Samling
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Ved å angi egendefinert brukerattributt hentes ressurser som samsvarer med kategoriseringen. Kategorier må være fra den globale konteksten.
 displayed-assets-must-match-these-custom-user-profile-attributes=Visningsressurser må samsvare med disse egendefinerte brukerprofilattributtene.
 displayed-assets-must-match-these-rules=Viste ressurser må samsvare med disse reglene.
@@ -33,8 +34,10 @@ query-contains=Spørring inneholder
 rename-collection=Gi samling nytt navn
 the-field-value-is-invalid=Feltverdien er ugyldig.
 there-are-no-asset-entries=Det finnes ingen ressursinnlegg.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Det finnes ingen bruk av samlinger.
 there-are-no-collections=There are no collections.
-view-content=Vis innhold
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Vis bruk
