--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_nl.properties
@@ -7,6 +7,7 @@ and-operator=En-operator
 asset-entry-type=Type assetinvoer
 audience=Doelgroep
 collection=Collectie
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Door aangepaste gebruikerskenmerken te specificeren, worden assets met de overeenstemmende categorisering opgehaald. Categorieën moeten uit de globale context komen.
 displayed-assets-must-match-these-custom-user-profile-attributes=Weergegeven assets moeten overeenstemmen met deze aangepaste gebruikersprofielkenmerken.
 displayed-assets-must-match-these-rules=Weergegeven assets moeten voldoen aan deze regels.
@@ -33,8 +34,10 @@ query-contains=Zoekopdracht bevat
 rename-collection=Collectie hernoemen
 the-field-value-is-invalid=De veldwaarde is ongeldig.
 there-are-no-asset-entries=Er is geen assetinvoer.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Er worden geen collecties gebruikt.
 there-are-no-collections=Er zijn geen collecties.
-view-content=Inhoud weergeven
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=Gebruiken weergeven
