--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pt_BR.properties
@@ -7,6 +7,7 @@ and-operator=E Operador
 asset-entry-type=Tipo de entrada de conteúdo
 audience=Público-alvo
 collection=Coleção
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Especificar os atributos personalizados do usuário recupera os conteúdos que possuam categorizações coincidentes. As categorias devem advir do contexto global.
 displayed-assets-must-match-these-custom-user-profile-attributes=Os conteúdos exibidos devem corresponder a estes atributos personalizados do perfil do usuário.
 displayed-assets-must-match-these-rules=Os conteúdos exibidos devem corresponder a estas regras.
@@ -33,8 +34,10 @@ query-contains=A consulta contém
 rename-collection=Renomear coleção
 the-field-value-is-invalid=O valor do campo é inválido.
 there-are-no-asset-entries=Não nenhuma entrada de conteúdo.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Não existem usos da coleções.
 there-are-no-collections=Não há coleções.
-view-content=Visualizar conteúdo
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=Visualizar página de exibição
+view-items=View Items (Automatic Copy)
 view-usages=Exibir usos
