--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_sv.properties
@@ -7,6 +7,7 @@ and-operator=Och operator
 asset-entry-type=Typ av tillgångslista
 audience=Målgrupp
 collection=Samling
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Anger anpassade användarattribut som hämtar tillgångar med matchande kategorisering. Kategorier måste vara från global kontext.
 displayed-assets-must-match-these-custom-user-profile-attributes=Tillgångar som visas måste matcha dessa anpassade attribut i användarprofilen.
 displayed-assets-must-match-these-rules=Innehåll som skall visas måste leva upp till dessa regler.
@@ -33,8 +34,10 @@ query-contains=Frågan innehåller
 rename-collection=Byt namn på samlingen
 the-field-value-is-invalid=Fältvärdet är ogiltigt.
 there-are-no-asset-entries=Det finns inga tillgångsposter.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Det finns ingen samlingsanvändning.
 there-are-no-collections=Det finns inga samlingar.
-view-content=Visa innehåll
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=Visa visningssida
+view-items=View Items (Automatic Copy)
 view-usages=Visa användning
