--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_th.properties
@@ -7,6 +7,7 @@ and-operator=And Operator
 asset-entry-type=ประเภทรายการเนื้อหา
 audience=ผู้ชม
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=การระบุแอททริบิวของผู้ใช้ที่กำหนดเองจะดึงเนื้อหาที่มีการจัดหมวดหมู่ที่ตรงกัน หมวดหมู่จะต้องมาจากบริบททั้งหมด
 displayed-assets-must-match-these-custom-user-profile-attributes=เนื้อหาที่แสดงต้องตรงกับแอตทริบิวต์โปรไฟล์ของผู้ใช้ที่กำหนดเองเหล่านี้
 displayed-assets-must-match-these-rules=เนื้อหาที่แสดงต้องตรงกับกฎเหล่านี้
@@ -33,8 +34,10 @@ query-contains=Query Contains
 rename-collection=Rename Collection
 the-field-value-is-invalid=ค่าของฟิลด์ไม่ถูกต้อง
 there-are-no-asset-entries=ไม่มีรายการแอสเสท
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=There are no collections.
-view-content=ดูเนื้อหา
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=ดูการใช้
