--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_CN.properties
@@ -7,6 +7,7 @@ and-operator=和操作员
 asset-entry-type=资产条目类型
 audience=受众
 collection=集合
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=指定自定义用户属性会检索具有匹配分类的资产。类别必须来自全局上下文。
 displayed-assets-must-match-these-custom-user-profile-attributes=显示的资产必须匹配这些自定义用户配置文件属性。
 displayed-assets-must-match-these-rules=显示的资产必须符合这些规则。
@@ -33,8 +34,10 @@ query-contains=查询包含
 rename-collection=重命名集合
 the-field-value-is-invalid=字段值无效。
 there-are-no-asset-entries=没有资产条目。
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=没有集合使用情况。
 there-are-no-collections=没有集合。
-view-content=查看内容
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=查看显示页
+view-items=View Items (Automatic Copy)
 view-usages=查看使用状况
