--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fi.properties
@@ -7,6 +7,7 @@ and-operator=Ja operaattori
 asset-entry-type=Sisältömerkinnän Tyyppi
 audience=Kohdeyleisö
 collection=Kokoelma
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Määrittämällä mukautetut käyttäjäattribuutit noudetaan sisällöt, joilla on sama luokittelu. Luokkien on oltava globaalista kontekstista.
 displayed-assets-must-match-these-custom-user-profile-attributes=Näytettävien sisältöjen täytyy osua näihin käyttäjän lisäkenttin.
 displayed-assets-must-match-these-rules=Näytettyjen sisältöjen täytyy täsmätä seuraaviin sääntöihin.
@@ -33,8 +34,10 @@ query-contains=Haku sisältää
 rename-collection=Nimeä Kokoelma Uudelleen
 the-field-value-is-invalid=Kentän arvo ei ole kelvollinen.
 there-are-no-asset-entries=Sisältömerkintöjä ei ole.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=Kokoelman käyttöjä ei ole.
 there-are-no-collections=Kokoelmia ei ole.
-view-content=Näytä Sisältö
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=Näytä Näyttösivu
+view-items=View Items (Automatic Copy)
 view-usages=Näytä Käyttökerrat
