--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_iw.properties
@@ -7,6 +7,7 @@ and-operator=And Operator
 asset-entry-type=סוג רשומת נכסים
 audience=Audience
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=ציון מאפייני המשתמש המותאמים אישית מאחזר נכסים בעלי סיווג תואם. על הקטגוריות להיות מתוך ההקשר הגלובלי.
 displayed-assets-must-match-these-custom-user-profile-attributes=על הנכסים המוצגים להיות תואמים למאפייני פרופיל המשתמש המותאמים אישית.
 displayed-assets-must-match-these-rules=על הנכסים המוצגים להתאים לחוקים אלה.
@@ -33,8 +34,10 @@ query-contains=Query Contains
 rename-collection=Rename Collection
 the-field-value-is-invalid=ערך השדה אינו חוקי.
 there-are-no-asset-entries=There are no asset entries.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=אין אוספים.
-view-content=הצג תוכן
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=הצג שימושים
