--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ta_IN.properties
@@ -7,6 +7,7 @@ and-operator=And Operator
 asset-entry-type=அசெட் என்ட்ரி டைப்
 audience=ஆடியன்ஸ்
 collection=Collection
+collection-providers=Collection Providers (Automatic Copy)
 custom-user-attributes-help=Specifying the custom user attributes retrieves assets that have matching categorization. Categories must be from the global context.
 displayed-assets-must-match-these-custom-user-profile-attributes=காண்பிக்கப்படும் அசெட்டுகள் இந்த custom user profile attributes-களுடன் பொருந்த வேண்டும்.
 displayed-assets-must-match-these-rules=காண்பிக்கப்படும் Assets-கள் இந்த rule-களுடன் பொருந்த வேண்டும்.
@@ -33,8 +34,10 @@ query-contains=Query Contains
 rename-collection=Rename Collection
 the-field-value-is-invalid=இந்த field value தவறானது.
 there-are-no-asset-entries=பதிவுகள் இல்லை.
+there-are-no-collection-providers=There are no collection providers. (Automatic Copy)
 there-are-no-collection-usages=There are no collection usages.
 there-are-no-collections=கலெக்ஷன்ஸ் எதுவும் காணப்படவில்லை.
-view-content=கண்டன்டை காட்டு
+there-are-no-items-in-the-collection-provider=There are no items in the collection provider. (Automatic Copy)
 view-display-page=View Display Page (Automatic Copy)
+view-items=View Items (Automatic Copy)
 view-usages=பயன்பாட்டைக் காட்டு
