--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ar.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=المحتوى حسب الجمهور والمر
 content-x=المحتوى ({0})
 create-marketing-categories-to-label-and-audit-your-content=قم بإنشاء فئات تسويق لتسمية ومراجعة المحتوى الخاص بك.
 education=التعليم
+filter-by=تصفية حسب (Automatic Translation)
 filter-by-author=تصفية حسب المؤلف
 filter-by-status=تصفية حسب الحالة
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=لوحة معلومات المحتويات
