--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_ca.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Contingut per audiència i fase ({0})
 content-x=Contingut ({0})
 create-marketing-categories-to-label-and-audit-your-content=Creeu categories de màrqueting per etiquetar i auditar el contingut.
 education=Educació
+filter-by=Filtrar per (Automatic Translation)
 filter-by-author=Filtra per autor (Automatic Translation)
 filter-by-status=Filtra per estat
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tauler de contingut
