--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_de.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Inhalt pro Zielgruppe und Phase ({0})
 content-x=Inhalt ({0})
 create-marketing-categories-to-label-and-audit-your-content=Erstellen Sie Marketingkategorien, um Ihren Inhalt zu bezeichnen und zu auditieren.
 education=Ausbildung
+filter-by=Filter By (Automatic Copy)
 filter-by-author=Nach Autor filtern
 filter-by-status=Nach Status filtern
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Inhalts-Dashboard
