--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fi.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Sisältö Yleisön ja Vaiheen ({0}) mukaan
 content-x=Sisältö ({0})
 create-marketing-categories-to-label-and-audit-your-content=Luo markkinointiluokkia merkitäksesi ja auditoidaksesi sisältöäsi.
 education=Koulutus
+filter-by=Filter By (Automatic Copy)
 filter-by-author=Suodata Tekijän Mukaan
 filter-by-status=Suodata Tilan Perusteella
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Sisällön Koontinäyttö
