--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_fr.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Contenu par public et par étape ({0})
 content-x=Contenu ({0})
 create-marketing-categories-to-label-and-audit-your-content=Créez des catégories de marketing pour libeller et faire des audits de votre contenu.
 education=Éducation
+filter-by=Filtrer par (Automatic Translation)
 filter-by-author=Filtrer par auteur (Automatic Translation)
 filter-by-status=Filtrer par statut
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tableau de bord du contenu
