--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_nl.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Inhoud per publiek en fase ({0})
 content-x=Inhoud ({0})
 create-marketing-categories-to-label-and-audit-your-content=Maak marketingcategorieën om uw inhoud te labelen en controleren.
 education=Educatie
+filter-by=Filter By (Automatic Copy)
 filter-by-author=Filter by Author (Automatic Copy)
 filter-by-status=Filter op status
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Inhouddashboard
