--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_pt_BR.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Conteúdo por audiência e fase ({0})
 content-x=Conteúdo ({0})
 create-marketing-categories-to-label-and-audit-your-content=Criar categorias de marketing para rotular e auditar seu conteúdo.
 education=Educação
+filter-by=Filtrar por (Automatic Translation)
 filter-by-author=Filtrar por Autor
 filter-by-status=Filtrar por estado
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Painel de conteúdo
