--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_zh_CN.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=按受众和阶段的内容 ({0})
 content-x=内容 ({0})
 create-marketing-categories-to-label-and-audit-your-content=创建营销类别以标记和审核您的内容。
 education=教育
+filter-by=筛选者 (Automatic Translation)
 filter-by-author=按作者筛选
 filter-by-status=按状态筛选
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=内容仪表板
