--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_en_AU.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Content per Audience and Stage ({0}) (Automatic
 content-x=Content ({0}) (Automatic Copy)
 create-marketing-categories-to-label-and-audit-your-content=Create marketing categories to label and audit your content. (Automatic Copy)
 education=Education (Automatic Copy)
+filter-by=Filter By (Automatic Copy)
 filter-by-author=Filter by Author (Automatic Copy)
 filter-by-status=Filter by Status (Automatic Copy)
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Content Dashboard (Automatic Copy)
