--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hi_IN.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Content per Audience and Stage ({0})
 content-x=Content ({0})
 create-marketing-categories-to-label-and-audit-your-content=Create marketing categories to label and audit your content.
 education=शिक्षा (Automatic Translation)
+filter-by=द्वारा फ़िल्टर करें (Automatic Translation)
 filter-by-author=लेखक द्वारा फ़िल्टर करें (Automatic Translation)
 filter-by-status=Filter by Status
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Content Dashboard
