--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_hu.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Tartalom közönség és szakasz szerint ({0})
 content-x=Tartalom ({0})
 create-marketing-categories-to-label-and-audit-your-content=Hozzon létre marketing-kategóriákat tartalma felcímkézéséhez és auditjához.
 education=Oktatás
+filter-by=Szűrés (Automatic Translation)
 filter-by-author=Szűrés szerző szerint (Automatic Translation)
 filter-by-status=Szűrés állapot szerint
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Tartalom műszerfal
