--- a/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/content-dashboard/content-dashboard-web/src/main/resources/content/Language_sv.properties
@@ -5,6 +5,7 @@ content-per-audience-and-stage-x=Innehåll efter målgrupp och nivå ({0})
 content-x=Innehåll ({0})
 create-marketing-categories-to-label-and-audit-your-content=Skapa marknadsföringskategorier för att sätta etikett på och granska ditt innehåll.
 education=Utbildning
+filter-by=Filter By (Automatic Copy)
 filter-by-author=Filtrera efter författare
 filter-by-status=Filtrera efter status
 javax.portlet.title.com_liferay_content_dashboard_web_portlet_ContentDashboardAdminPortlet=Instrumentpanel för innehåll
